# temper

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  SPEC.md  build.rs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  temper.toml  tsconfig.json
.claude/: settings.json
.claude/rules/: collaboration.md  fork-lifecycle.md  pending-entry.md  plan-state.md  posture-sweep.md  public-prose.md  release.md  rust.md  sdk.md
.flume/: PROTOCOL.md  chain.ts  inbox.md
.flume/amendments/: README.md  plan-export-consumer-reexport-carveout.md  plan-posture-sweep-marker-drift.md
.flume/friction/: README.md  build-ci-documented-two-line-job.md  build-cite-retag.md  build-clause-algebra-cannot-address-nested-fields.md  build-declaration-row-wire-naming.md  build-embedded-leaf-text-render-hook-gap.md  build-emit-into-resolves-source-paths-from-cwd.md  build-genre-fold-scope-mismatch.md  build-help-text-recut-stale-entry.md  build-import-hop-cap-cite-disagrees-with-live-docs.md  build-in-src-tmpdir-helper-consolidate.md  build-manifest-emit-routing-seam-blocked.md  build-named-field-lock-row.md  build-requirement-gate-scope.md  build-requirement-prose-harness-ts-stale-key.md  build-satisfier-kind-clause-locus.md  build-session-start-arg-spelling.md  build-stale-architecture-cites.md  build-temper-self-rep-unfilled-requirements.md  build-worktree-commits-land-on-main-branch.md  plan-architecture-debt-list-stale.md  plan-continuation-gate-reverts-human-specs-commits.md  plan-declarations-ts-nul-byte-greps-blind.md  plan-github-workflows-fence-comment.md  plan-grep-nul-binary-false-negative.md  plan-manifest-shared-read-hoist-repicks.md  plan-null-byte-grep-blindspot.md  plan-parked-marker-deadlock.md  plan-private-item-doc-link-gate.md  plan-refactor-capture-probe-exec-failed.md  plan-retired-surface-blast-radius-undercounted.md
.flume/plan/: open-questions.md  pending.json  state.md
.flume/prompts/: build.md  plan.md
.flume/refactor/: README.md  build-check-harness-copies.md  build-discovery-infallible-result-plumbing.md  build-extent-embedded-span.md  build-local-rows-miss-the-embedded-corpus.md  build-main-backing-tmpdir.md  build-per-kind-scan-rewalk.md  build-projection-path-two-homes.md  build-published-requirements-now-permanently-empty.md  build-schema-docs-channel-single-slot.md  build-type-predicate-cannot-cross-the-lock.md  plan-drift-lock-row-walk-triplication.md  plan-extract-foundation-boundary.md  plan-format-read-decode-duplication.md  plan-graph-engine-glob-extraction-duplication.md  plan-graph-resolved-edge-walk-duplication.md  plan-import-read-dirs-vacuous-pin.md  plan-import-write-rollup-placement.md  plan-json-manifest-import-layering.md  plan-kind-cohesion.md  plan-main-thin-dispatch-cohesion.md  plan-normalize-path-subsystem-placement.md  plan-overlay-builtin-kind-dedup.md  plan-read-context-member-citer-grain.md  plan-read-verb-strand-cohesion.md  session-clause-from-row-twins.md  session-gate-hook-command-dual-source.md  session-install-append-to-existing-untested.md  session-path-normalizers.md  session-plural-helper.md  session-seam-encode-twin.md  session-tmpdir-scaffolding.md  session-two-glob-engines.md
.github/: CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: release.yml  temper.yml
.temper/: harness.ts  hooks.ts  lock.toml  package-lock.json  package.json
.temper/AGENTS/: MEMORY.md
.temper/CLAUDE/: MEMORY.md
.temper/memory/: CLAUDE.md  CLAUDE.ts
.temper/rules/: collaboration.md  collaboration.ts  fork-lifecycle.md  fork-lifecycle.ts  pending-entry.md  pending-entry.ts  plan-state.md  plan-state.ts  posture-sweep.md  posture-sweep.ts  public-prose.md  public-prose.ts  release.md  release.ts  rust.md  rust.ts  sdk.md  sdk.ts
.temper/skills/: capture-friction.md  capture-friction.ts
archive/dogfood/: README.md
contract/: README.md
contract/manifest/: corpus.toml  decision.toml  empty-rejected.toml  memory.toml  rule.toml  skill.toml
contract/schema/: manifest.d.ts  manifest.schema.json
contracts/: rule.toml  skill.anthropic.toml
docs/: INTENT.md  base-harness-primer.md  cli.md  example-config.md  horizons.md  how-it-works.md  ledger.md  market-formats.md
docs/proposals/: posture-recursion.md
examples/base-harness/: CLAUDE.md  README.md  TODO.md  package.json
examples/demo/: gen-demo.sh  render_svg.py
kinds/rule/: KIND.md
kinds/skill/: KIND.md
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/src/: assembly.ts  assembly_artifacts.ts  (+16 more)
spec/: RELEASE-v0.1.md
specs/: 00-intent.md  05-model.md  10-contracts.md  15-kinds.md  20-surface.md  30-landscapes.md  40-composition.md  45-governance.md  50-distribution.md  55-offering.md  90-spec-system.md  builtins.md  distribution.md  intent.md
src/: address.rs  admissibility.rs  assembly_artifacts.rs  builtin.rs  builtin_kind.rs  builtin_lock.rs  builtin_lock.toml  bundle.rs  check.rs  compose.rs  contract.rs  coverage.rs  coverage_note.rs  dial.rs  display.rs  document.rs  drift.rs  engine.rs  extract.rs  frontmatter.rs  fs_util.rs  gate.rs  glob.rs  graph.rs  hash.rs  import.rs  install.rs  json_manifest.rs  json_splice.rs  kind.rs  layout.rs  lib.rs  main.rs  path.rs  placement.rs  read.rs  reporter.rs  roster.rs  rule.rs  rules.rs  (+7 more)
tests/: acceptance.rs  adapter_fidelity.rs  agent_kind.rs  apply.rs  assembly_artifacts_gate.rs  builtin_lock_frozen.rs  bundle.rs  check_cost.rs  cli.rs  closed_keys.rs  command_kind.rs  contract_fixtures.rs  contract_template.rs  coverage.rs  coverage_note.rs  dial_kind.rs  directive_classing.rs  display_rule.rs  emit.rs  extent.rs  extract_equivalence.rs  field_addressing.rs  gate_fail_loud.rs  gauntlet.rs  genre_leaf.rs  graph.rs  hook_kind.rs  install.rs  installed_plugin_kind.rs  json_document_format.rs  known_marketplace_kind.rs  layer_join.rs  layout_edge_slot.rs  layout_kind.rs  layout_prose_import.rs  local_locus.rs  lock_declaration_rows.rs  manifest_adapter.rs  manifest_kind_spelling.rs  manifest_schema_oracle.rs  (+27 more)
(+235 files in other folders)
