[package]
name = "temper"
version = "0.1.0"
edition = "2024"
description = "A typed maintenance surface for the Claude Code harness — import, lint, compose, and apply skills, hooks, rules, agents, and plugin/marketplace manifests."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["claude", "claude-code", "harness", "skills", "linter"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Diagnostics & errors (the linter UX surface — see .claude/rules/rust.md)
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# Serialization. toml_edit is the format-preserving round-trip keystone (specs/20-surface.md).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.22"

# Artifact parsing: frontmatter split + filesystem walk + provenance hashing.
gray_matter = "0.2"
walkdir = "2"
sha2 = "0.10"

# Contract engine: the `pattern` primitive (adopt the solved mechanic — never
# hand-roll regex; specs/10-contracts.md "bespoke closed algebra" decision).
regex = "1"

[dev-dependencies]
# Golden import/apply fixtures (specs/20-surface.md). `filters` redacts the per-machine
# absolute source path from the import-surface snapshot.
insta = { version = "1", features = ["filters"] }
