[package]
name = "temper"
version = "0.1.0"
edition = "2024"
description = "A typed maintenance surface for the Claude Code harness — import, lint, compose, and apply skills, hooks, rules, agents, and plugin/marketplace manifests."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["claude", "claude-code", "harness", "skills", "linter"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Diagnostics & errors (the linter UX surface — see .claude/rules/rust.md)
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# Serialization. toml_edit is the format-preserving round-trip keystone (specs/model/pipeline.md, "Emit").
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.22"

# Artifact parsing: frontmatter split + filesystem walk + provenance hashing.
gray_matter = "0.2"
walkdir = "2"
# Discovery walks honor the repo's ignore rules (`.gitignore` + always-exclude
# `.git`) so a `**` governs glob can't import a vendored dep's memory file
# (specs/model/pipeline.md, "Install" — discovery honors ignore rules). ripgrep's
# engine, so nested files/negation/precedence are not hand-rolled.
ignore = "0.4"
sha2 = "0.10"
# The one glob engine (already inside `ignore` transitively; pinned direct here
# so `governs`/`paths-match` glob matching never hand-rolls a segment matcher or
# a regex compiler — specs/process/engineering.md, "Libraries before hand-rolls").
globset = "0.4"

# Contract engine: the `pattern` primitive (adopt the solved mechanic — never
# hand-roll regex; specs/model/contract.md "bespoke closed algebra" decision).
regex = "1"

# Interchange schema, generated Rust-first from the manifest IR (`src/schema/interchange.rs`):
# schemars derives the JSON Schema 2020-12, ts-rs the TypeScript types both implementations
# version against (specs/distribution.md, acquisition Decision; ratified
# reconcile, inbox item 2b "schema generation Rust-first").
schemars = "1"
ts-rs = "12"

[dev-dependencies]
# Golden import/apply fixtures (specs/model/pipeline.md, "Install"). `filters` redacts the per-machine
# absolute source path from the import-surface snapshot.
insta = { version = "1", features = ["filters"] }
# Build a nested-frontmatter `Unit` in the extraction-equivalence test's key-path
# case — the same parsed shape the yaml-frontmatter adapter yields.
serde_json = "1"
# Test temp dirs (CLAUDE.md, "Tech stack") — the RAII builder behind
# tests/common::tmpdir and every in-src `#[cfg(test)]` module's own temp dir.
tempfile = "3"
