[package]
name = "temper"
version = "0.0.13"
edition = "2024"
description = "A typed maintenance surface for the Claude Code harness — import, lint, compose, and apply skills, hooks, rules, agents, and plugin/marketplace manifests."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["claude", "claude-code", "harness", "skills", "linter"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Diagnostics & errors (the linter UX surface — see .claude/rules/rust.md)
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# Serialization. toml_edit is the format-preserving round-trip keystone (specs/model/pipeline.md, "Emit").
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.22"

# Artifact parsing: frontmatter split + filesystem walk + provenance hashing.
gray_matter = "0.2"
walkdir = "2"
# Discovery walks honor the repo's ignore rules (`.gitignore` + always-exclude
# `.git`) so a `**` governs glob can't import a vendored dep's memory file
# (specs/model/pipeline.md, "Install" — discovery honors ignore rules). ripgrep's
# engine, so nested files/negation/precedence are not hand-rolled.
ignore = "0.4"
sha2 = "0.10"
# The one glob engine (already inside `ignore` transitively; pinned direct here
# so `governs`/`paths-match` glob matching never hand-rolls a segment matcher or
# a regex compiler — specs/process/engineering.md, "Libraries before hand-rolls").
globset = "0.4"

# The charset mechanics behind `allowed_chars` — hidden, never an author-facing
# `pattern` clause (adopt the solved mechanic rather than hand-roll it).
regex = "1"
# The RFC 9535 engine behind a clause's field addressing — hidden the same way `regex`
# hides under `allowed_chars` and `globset` under the governs glob, never a hand-rolled
# path walker (specs/process/engineering.md, "Libraries before hand-rolls").
# `default-features = false` drops the function extensions and their `regex`: they exist
# only inside filter expressions, which the declared subset refuses at admissibility.
serde_json_path = { version = "0.7", default-features = false }

# Interchange schema, generated Rust-first from the IR (`src/schema.rs`): schemars derives
# the JSON Schema 2020-12 the `schema` verb emits (specs/distribution.md, acquisition
# Decision).
schemars = "1"
# The TS↔Rust seam bindings under `sdk/src/generated/`.
# `no-serde-warnings`: the seam's `NestedMemberRow.collections` carries a
# `#[serde(deserialize_with)]` ts-rs cannot read (the field's TS is pinned with
# `#[ts(as)]` instead) — silence the parse notice for that deliberate override.
ts-rs = { version = "12", features = ["no-serde-warnings"] }

[dev-dependencies]
# Golden import/apply fixtures (specs/model/pipeline.md, "Install"). `filters` redacts the per-machine
# absolute source path from the import-surface snapshot.
insta = { version = "1", features = ["filters"] }
# Build a nested-frontmatter `Unit` in the addressing tests — the same parsed shape the
# yaml-frontmatter adapter yields.
serde_json = "1"
# Test temp dirs (CLAUDE.md, "Tech stack") — the RAII builder behind
# tests/common::tmpdir and every in-src `#[cfg(test)]` module's own temp dir.
tempfile = "3"
# The seam-binding staleness gate (`tests/seam_bindings_current.rs`) names
# `ts_rs::{TS, Config}` directly to re-export the bindings in memory.
ts-rs = { version = "12", features = ["no-serde-warnings"] }
